Update project metadata

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,17 +22,18 @@ classifiers = [
   'Operating System :: OS Independent',
   'Programming Language :: Python :: 3',
   'Programming Language :: Python :: 3 :: Only',
-  'Programming Language :: Python :: 3.8',
   'Programming Language :: Python :: 3.9',
   'Programming Language :: Python :: 3.10',
   'Programming Language :: Python :: 3.11',
+  'Programming Language :: Python :: 3.12',
+  'Programming Language :: Python :: 3.13',
   'Topic :: Scientific/Engineering',
   'Topic :: Scientific/Engineering :: Artificial Intelligence',
   'Topic :: Scientific/Engineering :: Visualization',
 ]
 
-# [project.urls]
-# repository = "your github repository"
+[project.urls]
+repository = "your github repository"
 # space = "your space url"
 
 [project.optional-dependencies]
