--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ build-backend = "hatchling.build"
 [project]
 name = "gradio_bbox_annotator"
 version = "0.1.1"
-description = "Bounding box annotation tool that supports insertion and editing"
+description = "Bounding box annotation tool for Gradio"
 readme = "README.md"
 license = "apache-2.0"
 requires-python = ">=3.10"
